--- a/.README.md.html
+++ b/.README.md.html
@@ -709,8 +709,8 @@ function setDocumentScrollTop(ypos)
 </table> 
 <p>Worksheets for formative and assessed coursework:</p> 
 <ul> 
- <li><a href="">Part I: Agile practices and NoSQL</a></li> 
- <li><a href="">Part II: Cloud Automation using Model-Driven Engineering</a></li> 
+ <li><a href="https://github.com/uol-inf/CO7X17-17-18/tree/master/partI">Part I: Agile practices and NoSQL</a></li> 
+ <li><a href="https://github.com/uol-inf/CO7X17-17-18/tree/master/partII">Part II: Cloud Automation using Model-Driven Engineering</a></li> 
 </ul> 
 <h2> <a id="tooling-and-gihub-setup" class="anchor" href="#tooling-and-gihub-setup" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tooling and GiHub setup</h2> 
 <ul> 
