--- a/.tooling.md.html
+++ b/.tooling.md.html
@@ -656,7 +656,7 @@ function setDocumentScrollTop(ypos)
 <p>A screencast describing how to install the STS, Groovy and Gradle is available 
  <g-emoji alias="movie_camera" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f3a5.png" ios-version="6.0">
   🎥
- </g-emoji> <a href="https://campus.cs.le.ac.uk/teaching/resources/CO2006/installation-sts-groovy-gradle.mp4">here</a>.</p> 
+ </g-emoji> <a href="https://leicester.cloud.panopto.eu/Panopto/Pages/Viewer.aspx?id=e319d6ac-c47d-4197-ac82-3850b313b8b7">here</a>.</p> 
 <p>Further considerations on the tools that we are going to use in CO7X17 are described below.</p> 
 <h3> <a id="java-8" class="anchor" href="#java-8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Java 8</h3> 
 <ul> 
@@ -718,7 +718,7 @@ function setDocumentScrollTop(ypos)
 <p>GitHub is used to submit assessed coursework. Please accept the corresponding invitation below, which will create your individual private repository on GitHub, and clone it in the STS as explained 
  <g-emoji alias="movie_camera" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f3a5.png" ios-version="6.0">
   🎥
- </g-emoji> <a href="https://campus.cs.le.ac.uk/teaching/resources/CO2006/github-setup.mp4">in this video</a>. The video also explains how to import the exercises for sprint 1.</p> 
+ </g-emoji> <a href="https://leicester.cloud.panopto.eu/Panopto/Pages/Viewer.aspx?id=dc275383-e28f-426e-b5cd-6a60dcc6609d">in this video</a>. The video also explains how to import the exercises for sprint 1.</p> 
 <ul> 
  <li> <a href="https://classroom.github.com/a/b47fCaTn">Invitation for CO7217</a> (campus students)</li> 
  <li> <a href="https://classroom.github.com/a/0PR7AvFz">Invitation for CO7517</a> (DL students)</li> 
