--- a/partI/.mu1.md.html
+++ b/partI/.mu1.md.html
@@ -649,10 +649,16 @@ function setDocumentScrollTop(ypos)
 <p>At the end of this page you will find a jargon buster on terms that may be new to you.</p> 
 <h2> <a id="lecture" class="anchor" href="#lecture" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Lecture</h2> 
 <p>Unfortunately, there has been a technical problem with the recording of the lecture and the link below refers to the lecture recorded in the previous year.</p> 
-<p>
- <g-emoji alias="movie_camera" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f3a5.png" ios-version="6.0">
-  🎥
- </g-emoji> <a href="https://leicester.cloud.panopto.eu/Panopto/Pages/Viewer.aspx?id=ab1db355-12b8-4621-abc2-1c073347dc0a">Lecture. Agile Practices with Groovy and Gradle</a></p> 
+<ul> 
+ <li> 
+  <g-emoji alias="movie_camera" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f3a5.png" ios-version="6.0">
+   🎥
+  </g-emoji> <a href="https://leicester.cloud.panopto.eu/Panopto/Pages/Viewer.aspx?id=ab1db355-12b8-4621-abc2-1c073347dc0a">Lecture 1a. Continuous Delivery</a> </li> 
+ <li> 
+  <g-emoji alias="movie_camera" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f3a5.png" ios-version="6.0">
+   🎥
+  </g-emoji> <a href="https://leicester.cloud.panopto.eu/Panopto/Pages/Viewer.aspx?id=4a1c3c1b-f9c3-44a9-bac4-c6de95732063">Lecture 1b. Gradle</a> </li> 
+</ul> 
 <h2> <a id="groovy" class="anchor" href="#groovy" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Groovy</h2> 
 <p>In this unit, we are going to cover the basics of Groovy's syntax so as to be able to read and write Gradle build scripts. We are going to focus on:</p> 
 <ul> 
