Update references of worksheets

--- a/partI/Groovy_exercises/.readme.md.html
+++ b/partI/Groovy_exercises/.readme.md.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>/Users/ab373/Documents/ArturData/WORK/ECLIPSE/LECTURES/2017-18/CO2006-17-18/sprint1/Groovy_exercises/.readme.md.html</title>
+<title>/Users/ab373/Documents/ArturData/git/CO7X17-17-18/partI/Groovy_exercises/.readme.md.html</title>
 
 
 <style type="text/css">
@@ -690,7 +690,13 @@ function setDocumentScrollTop(ypos)
 </ul> 
 <h2> <a id="additional-resources" class="anchor" href="#additional-resources" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Additional resources</h2> 
 <ul> 
- <li><a href="http://groovy-lang.org/documentation.html">Groovy documentation</a></li> 
+ <li> <a href="http://groovy-lang.org/documentation.html">Groovy documentation</a>: please browse as required 
+  <ul> 
+   <li><a href="http://groovy-lang.org/syntax.html">Groovy syntax</a></li> 
+   <li><a href="http://groovy-lang.org/operators.html">Groovy operators</a></li> 
+   <li><a href="http://groovy-lang.org/closures.html">Groovy closures</a></li> 
+   <li><a href="http://groovy-lang.org/groovy-dev-kit.html">Groovy development kit</a></li> 
+  </ul> </li> 
  <li><a href="http://geek.starbean.net/?page_id=202">Groovy cheatsheet</a></li> 
  <li><a href="https://groovyconsole.appspot.com">Groovy web console</a></li> 
  <li><a href="http://www.javaworld.com/article/2074145/core-java/ten-groovy-one-liners-to-impress-your-friends.html">Ten Groovy One Liners to Impress Your Friends</a></li> 
