--- a/partI/Gradle_ex01/.readme.md.html
+++ b/partI/Gradle_ex01/.readme.md.html
@@ -692,7 +692,23 @@ I'm task number 6
  <h2> <a id="additional-resources" class="anchor" href="#additional-resources" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Additional Resources</h2> 
  <ul> 
   <li> <a href="https://docs.gradle.org/current/userguide/tutorials.html">Getting started</a>: official Gradle tutorial to get started with Gradle.</li> 
-  <li><a href="https://docs.gradle.org/current/userguide/userguide">Gradle's user guide</a></li> 
+  <li> <a href="https://docs.gradle.org/current/userguide/userguide.html">Gradle's user guide</a> 
+   <ul> 
+    <li> <a href="https://docs.gradle.org/current/userguide/overview.html">Overview</a>: with motivation to use Groovy</li> 
+    <li><a href="https://docs.gradle.org/current/userguide/artifact_dependencies_tutorial.html">Dependency management basics</a></li> 
+    <li><a href="https://docs.gradle.org/current/userguide/gradle_wrapper.html">Gradle wrapper</a></li> 
+    <li><a href="https://docs.gradle.org/current/userguide/gradle_command_line.html">Gradle command line</a></li> 
+    <li><a href="https://docs.gradle.org/current/userguide/sample_list.html">Examples of Gradle build scripts</a></li> 
+    <li><a href="https://docs.gradle.org/current/userguide/tutorial_using_tasks.html">Building scripts basics</a></li> 
+    <li><a href="https://docs.gradle.org/current/userguide/writing_build_scripts.html">Writing build scripts</a></li> 
+   </ul> </li> 
+  <li>[Gradle plugins] 
+   <ul> 
+    <li><a href="https://docs.gradle.org/current/userguide/tutorial_java_projects.html">Java quickstart</a></li> 
+    <li> <a href="https://docs.gradle.org/current/userguide/application_plugin.html">Application plugin</a>: to run Java apps on the console</li> 
+    <li><a href="https://docs.gradle.org/current/userguide/tutorial_groovy_projects.html">Groovy quickstart</a></li> 
+    <li><a href="https://docs.gradle.org/current/userguide/groovy_plugin.html">Groovy plugin</a></li> 
+   </ul> </li> 
   <li><a href="https://docs.gradle.org/current/dsl">Gradle DSL reference</a></li> 
   <li><a href="http://www.tutorialspoint.com/gradle/">Gradle tutorial - Tutorialspoint</a></li> 
  </ul> 
