description of mu2

--- a/partI/.mu2.md.html
+++ b/partI/.mu2.md.html
@@ -640,7 +640,12 @@ function setDocumentScrollTop(ypos)
 </head>
 <body class="markdown-body">
 <h1> <a id="module-unit-2-polyglot-persistence" class="anchor" href="#module-unit-2-polyglot-persistence" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Module Unit 2: Polyglot Persistence</h1> 
-<p>In this module unit, we are going to discuss some key notions underpinning the success of NoSQL technologies with respect to SQL technologies. As a representative example of NoSQL technologies, we will experiment with a MongoDB instance deployed on the Cloud.</p> 
+<p>In this module unit, we are going to discuss</p> 
+<ul> 
+ <li>key notions underpinning the success of NoSQL technologies with respect to SQL technologies;</li> 
+ <li>an outline of the NoSQL ecosystem, focussing on Document stores with MongoDB.</li> 
+</ul> 
+<p>As a representative example of NoSQL technologies, we will experiment with a MongoDB instance deployed on the Cloud.</p> 
 <p>The lectures are supplemented with a presentation on the subject by Martin Fowler - the author of the book that we are using for this module unit.</p> 
 <p>The exercises illustrate how to use a document store (MongoDB) for implementing data persistence layers for cloud applications with very little effort using the languages that we learnt in the previous module unit (Gradle and Groovy).</p> 
 <h2> <a id="introduction-to-nosql-by-martin-fowler" class="anchor" href="#introduction-to-nosql-by-martin-fowler" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction to NoSQL by Martin Fowler</h2> 
