--- a/partI/.readme.md.html
+++ b/partI/.readme.md.html
@@ -642,6 +642,8 @@ function setDocumentScrollTop(ypos)
 <h1> <a id="part-i-agile-practices-and-nosql-technology" class="anchor" href="#part-i-agile-practices-and-nosql-technology" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Part I: Agile Practices and NoSQL Technology</h1> 
 <ul> 
  <li><a href="./.mu1.md.html">Module Unit 1</a></li> 
+ <li><a href="./.mu2.md.html">Module Unit 2</a></li> 
+ <li><a href="./.mu3.md.html">Module Unit 3</a></li> 
 </ul>
 </body>
 </html>
