links solutions in mu1

--- a/partI/.mu1.md.html
+++ b/partI/.mu1.md.html
@@ -676,7 +676,13 @@ function setDocumentScrollTop(ypos)
  <li> 
   <g-emoji alias="computer" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4bb.png" ios-version="6.0">
    💻
-  </g-emoji> <a href="https://github.com/uol-inf/CO7X17-17-18/blob/master/partI/Groovy_exercises/readme.md">Exercises with Groovy</a> </li> 
+  </g-emoji> <a href="https://github.com/uol-inf/CO7X17-17-18/blob/master/partI/Groovy_exercises/readme.md">Exercises with Groovy</a> 
+  <ul> 
+   <li> 
+    <g-emoji alias="computer" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4bb.png" ios-version="6.0">
+     💻
+    </g-emoji> <a href="./.Groovy_exercises_solution.md.html">Solution</a> </li> 
+  </ul> </li> 
 </ul> 
 <p>Solutions to exercises will be posted under this folder on GitHub as projects with the name <code>${ExerciseName}_solution</code>.</p> 
 <h2> <a id="automating-builds-with-gradle" class="anchor" href="#automating-builds-with-gradle" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Automating builds with Gradle</h2> 
@@ -715,11 +721,23 @@ function setDocumentScrollTop(ypos)
  <li> 
   <g-emoji alias="computer" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4bb.png" ios-version="6.0">
    💻
-  </g-emoji> <a href="https://github.com/uol-inf/CO7X17-17-18/blob/master/partI/Gradle_ex01/readme.md">Exercise 1</a> (<strong>Gradle tasks and dependencies</strong>)</li> 
+  </g-emoji> <a href="https://github.com/uol-inf/CO7X17-17-18/blob/master/partI/Gradle_ex01/readme.md">Exercise 1</a> (<strong>Gradle tasks and dependencies</strong>) 
+  <ul> 
+   <li> 
+    <g-emoji alias="computer" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4bb.png" ios-version="6.0">
+     💻
+    </g-emoji> <a href="./.Gradle_ex01_solution.md.html">Solution</a> </li> 
+  </ul> </li> 
  <li> 
   <g-emoji alias="computer" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4bb.png" ios-version="6.0">
    💻
-  </g-emoji> <a href="https://github.com/uol-inf/CO7X17-17-18/blob/master/partI/Gradle_ex02/readme.md">Exercise 2</a> (<strong>Java builds and Java libraries</strong>)</li> 
+  </g-emoji> <a href="https://github.com/uol-inf/CO7X17-17-18/blob/master/partI/Gradle_ex02/readme.md">Exercise 2</a> (<strong>Java builds and Java libraries</strong>) 
+  <ul> 
+   <li> 
+    <g-emoji alias="computer" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4bb.png" ios-version="6.0">
+     💻
+    </g-emoji> <a href="./.Gradle_ex02_solution.md.html">Solution</a> </li> 
+  </ul> </li> 
 </ul> 
 <p>Solutions to exercises will be posted under this folder on GitHub as projects with the name <code>${ExerciseName}_solution</code>.</p> 
 <h2> <a id="jargon-buster-" class="anchor" href="#jargon-buster-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Jargon buster <a name="user-content-jargon"></a> </h2> 
