--- a/.README.md.html
+++ b/.README.md.html
@@ -643,6 +643,7 @@ function setDocumentScrollTop(ypos)
 <p>Repository with learning resources for Agile Cloud Automation (CO7217 and CO7517)</p> 
 <h2> <a id="study-guide-and-schedule" class="anchor" href="#study-guide-and-schedule" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Study guide and schedule</h2> 
 <p>Please access the information on Blackboard.</p> 
+<p>The schedule of the sessions can be found <a href="https://calendar.google.com/calendar/embed?src=uf9eg8fvqd5kdk0ge4r44qh4vg%40group.calendar.google.com&amp;ctz=Europe/London">on this Google calendar</a>.</p> 
 <h2> <a id="exercises-and-assessed-coursework" class="anchor" href="#exercises-and-assessed-coursework" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Exercises and assessed coursework</h2> 
 <p>Outline of assessed coursework:</p> 
 <table> 
@@ -661,7 +662,7 @@ function setDocumentScrollTop(ypos)
    <td></td> 
    <td>100</td> 
    <td>30%</td> 
-   <td>27/10/2017</td> 
+   <td>3/11/2017 (9:00am)</td> 
   </tr> 
   <tr> 
    <td></td> 
@@ -689,7 +690,7 @@ function setDocumentScrollTop(ypos)
    <td></td> 
    <td>100</td> 
    <td>30%</td> 
-   <td>14/12/2017</td> 
+   <td>14/12/2017 (9:00am)</td> 
   </tr> 
   <tr> 
    <td></td> 
